# pubmed

./: .gitignore  README.md  config.yaml  efetcher_and_parser.py  esearcher.py  main.py  main_2.py  pyproject.toml  requirements.txt  save_to_csv.py  test.ipynb  utils.py  x.ipynb
files/: default.csv  myscript.sh  test.ipynb
files/src/: efetcher_and_parser.py  esearcher.py  save_to_csv.py
outputs/: test2@gmail.com.csv
src/: efetcher_and_parser.py  email_api.py  esearcher.py  example.py  file_list.py  queues.py  save_to_csv.py  script.sh  test.ipynb  utils.py
