[tool.poetry]
name = "pubmed"
version = "0.1.0"
description = "Pipeline to get research paper details from pubmed based on user queries."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11" 
requests = ">=2.32.4,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
get-papers-list = "src.file_list:main"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
